# incremental-compilation-lombok

./: .gitignore  MODULE.bazel  README.md  build.gradle  pom.xml  settings.gradle  setup.sh  stop.sh
bootstrap/: MODULE.bazel  build.gradle  pom.xml
bootstrap/src/main/java/com/incremental/bootstrap/: Application.java  Header.java
bootstrap/src/main/java/com/incremental/bootstrap/annotations/: ResponseBodyWrapperController.java
bootstrap/src/main/java/com/incremental/bootstrap/config/: AppWebConfig.java
bootstrap/src/main/java/com/incremental/bootstrap/controller/: TableHeaderController.java
bootstrap/src/main/java/com/incremental/bootstrap/json/: EnumIntValue.java  EnumStringValue.java  FastJsonEnumIntValueDeserializer.java  FastJsonEnumIntValueSerializer.java
bootstrap/src/main/java/com/incremental/bootstrap/models/: Header.java  PayingActivityList.java  TableHeader.java
bootstrap/src/main/java/com/incremental/bootstrap/response/: Response.java
bootstrap/src/main/java/com/incremental/bootstrap/wrapper/: ResponseBodyWrapper.java
buildSrc/src/main/groovy/: buildlogic.java-conventions.gradle
gradle/: libs.versions.toml
shared/: MODULE.bazel  build.gradle  pom.xml
shared/src/main/java/org/incremental/shared/: BasicHeader.java  PageBase.java
src/main/java/com/incremental/: BasicHeader.java  FastJsonConfig.java  Header.java
src/test/java/com/incremental/: BasicHeaderTest.java
