module(name = "incremental-compilation", version = "1.0")

bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.projectlombok:lombok:1.18.26",
        "com.alibaba.fastjson2:fastjson2:2.0.52",
        "com.google.j2objc:j2objc-annotations:1.3",
        "org.junit.jupiter:junit-jupiter-api:5.13.4",
    ],
    repositories = [
        "https://maven.aliyun.com/nexus/content/groups/public",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")